--- a/assets/scss/colors/_presets.scss
+++ b/assets/scss/colors/_presets.scss
@@ -1,7 +1,7 @@
 //All Preset color variables are here
 
  // Defult color
- $defult: #4DAAA7;
+ $defult: #005EA6;
  
 //Current Preset Declareation
  $preset:  $defult;
