--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -318,8 +318,8 @@ hr {
 .feature-item .icon {
   float: left;
   border: 1px solid #fff;
-  width: 80px;
-  height: 80px;
+  width: 50px;
+  height: 50px;
   text-align: center;
   border-radius: 50%;
   transition: all 0.6s ease;
@@ -327,14 +327,16 @@ hr {
   -webkit-transition: all 0.6s ease;
 }
 .feature-item .icon i {
-  font-size: 36px;
+  font-size: 30px;
   color: #fff;
-  line-height: 80px;
+  line-height: 50px;
 }
 
 .feature-content {
   color: #fff;
-  margin-left: 100px;
+  margin-left: 70px;
+  font-size: 22px;
+  margin-top: 10px;
 }
 .feature-content h3 {
   color: #fff;
