--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -218,7 +218,7 @@ a.back-to-top i {
   height: 40px;
   line-height: 40px;
   color: #fff;
-  background: #005EA6;
+  background: #005ea6;
   border-radius: 30px;
   text-align: center;
   transition: all 0.2s ease-in-out;
